# pyworkman

./: .gitignore  README.md  make.sh  pyproject.toml  requirements.txt
backend/: conf.py  main.py  settings.py  urls.py
postgres/: Dockerfile  pg_hba.conf  postgr.sh  postgresql.conf
services/: conf.py  echo.py  iwc-caption.py  shell-executor.py
ui/: package-lock.json  package.json  svelte.config.js  vite.config.js
ui/src/: JobInput.svelte  Main.svelte  store.js  tailwind.css  utils.js
ui/src/lib/: ACInput.svelte  ACItem.svelte  JobForm.svelte  JobStatus.svelte  ServiceDetails.svelte  TopBar.svelte
ui/templates/: base.html  main.html
util/: conf.py  db.py
workman/: __init__.py  __main__.py  broker.py  client.py  conf.py  manager.py  protocol.py  service.py  worker.py
workman/backend/: __init__.py  main.py  settings.py  wsgi.py
workman/examples/: echo.py  shell-executor.py  shell.py
workman/ui/: .gitignore  tailwind.config.js  vite.config.js
workman/ui/public/: main.js  style.css
workman/ui/src/: JobInput.svelte  Main.svelte  main.js  store.js  tailwind.css  utils.js
workman/ui/src/lib/: ACInput.svelte  ServiceDetails.svelte  ServiceList.svelte  TopBar.svelte
workman/ui/templates/: base.html
workman/util/: bootstrap.py  db.py  makeconf.py  shell.py
