[project]
name = "pyworkman"
version = "0.1.7"
authors = [
    { name="Akhlak Mahmood", email="akhlakm@gatech.edu" },
]
description = "ZeroMQ based work management with WebUI."
readme = "README.md"
requires-python = ">=3.9"

keywords = ["zeromq", "development"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pyzmq",
    "pylogg @ git+https://github.com/akhlakm/python-logg.git",
]

[project.optional-dependencies]
# Enable WebUI server. Install using `pip install .[server]`
server = [
    "django",
    "whitenoise",
]
# Enable Postgres database. Install using `pip install .[db]`
db = [
    "psycopg[binary]",
    "psycopg[pool]",
]

[project.urls]
"Homepage" = "https://github.com/akhlakm/pyworkman"
"Bug Tracker" = "https://github.com/akhlakm/pyworkman/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["workman"]

[project.scripts]
workman = "workman.__main__:main"

[tool.setuptools.package-data]
'workman' = [
    '*.py', 'util/**.py', 'backend/**.py',
    'ui/build/*', 'ui/public/*', 'ui/templates/*'
]
